# PathPool

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
cmake_scripts/: Coverage.cmake  Version.cmake
examples/: CMakeLists.txt
examples/path/: CMakeLists.txt  ex1.cpp
examples/path_pool/: CMakeLists.txt  ex1.cpp
perftest/: CMakeLists.txt
perftest/includes/: BoostPath.h  CMakeLists.txt
perftest/path/: CMakeLists.txt  comparison.cpp  insertion.cpp  random_insertion.cpp
perftest/pathpool/: CMakeLists.txt  random_insertion.cpp
src/: CMakeLists.txt  field_ref_iterator.h  main.cpp  path.h  path_pool.h
src/impl/: custom_iterators.h  impl_hash_path_pool.h  impl_list_path_pool.h  impl_path.h  impl_path_pool_utils.h  impl_path_utils.h
utests/: CMakeLists.txt
utests/includes/: CMakeLists.txt  utest.h  utest_inclusive_range.h  utest_pretty.h  utest_traits.h  utest_tuple.h  utest_utils.h
utests/path/: CMakeLists.txt  common_path_short.cpp  empty_short.cpp  iterator_short.cpp  populated_short.cpp
utests/pathpool/: CMakeLists.txt  crosscomp_long.cpp  empty_short.cpp  get_common_path_short.cpp  get_taglist_short.cpp  iterator_short.cpp  testobj.h  vergecase_long.cpp
