function(add_perf_test)
  cmake_parse_arguments(add_perf_test "" "FNAME" "DEPENDS;FILES" ${ARGN})
  set(fname ${add_perf_test_FNAME})
  set(files ${add_perf_test_FILES})
  set(depends ${add_perf_test_DEPENDS})
  set(name perftest_${fname})

  list(APPEND features cxx_std_14 )
  list(APPEND compile_opt "-O3")
  list(APPEND compile_opt "-march=native")
  list(APPEND compile_opt "-mtune=native")

  message("Target: ${name} (${files})")
  add_executable( ${name} )
  target_sources( ${name} PRIVATE ${files}  )
  target_compile_features( ${name} PRIVATE ${features} )
  target_compile_options( ${name} PRIVATE ${compile_opt} )
  target_compile_definitions( ${name} PRIVATE -DUTEST_FNAME=${fname} )
  target_include_directories( ${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries( ${name} PRIVATE ${depends} benchmark::benchmark benchmark::benchmark_main)
  message("Target: ${name} [done] \t <- ${depends}")
  list(APPEND utests ${name})
endfunction()

add_subdirectory(includes)
add_subdirectory(pathpool)
