function(add_perf_test)
  cmake_parse_arguments(add_perf_test "" "FNAME" "DEPENDS;FILES;FEATURES,FLAGS;PROPERTIES;DEFINITIONS" ${ARGN})
  set(fname ${add_perf_test_FNAME})
  set(files ${add_perf_test_FILES})
  set(depends ${add_perf_test_DEPENDS})
  set(features ${add_perf_test_FEATURES})
  set(flags ${add_perf_test_FLAGS})
  set(properties ${add_perf_test_PROPERTIES})
  set(definitions ${add_perf_test_DEFINITIONS})

  list(APPEND features cxx_std_14 )
  list(APPEND compile_opt "-O3")
  list(APPEND compile_opt "-march=native")
  list(APPEND compile_opt "-mtune=native")

  set(name perftest-${fname}-${PROJECT_VERSION})
  message("Target: ${name}")
  add_executable( ${name} )
  target_sources( ${name} PRIVATE ${files}  )
  target_compile_features( ${name} PRIVATE ${features} )
  target_compile_options( ${name} PRIVATE ${compile_opt} )
  set_target_properties( ${name} PROPERTIES ${properties} )
  target_compile_definitions( ${name} PRIVATE ${definitions} )
  target_include_directories( ${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries( ${name} PRIVATE ${depends} benchmark::benchmark benchmark::benchmark_main)
  message("Target: ${name} [done]")
endfunction()

add_subdirectory(includes)
add_subdirectory(pathpool)
add_subdirectory(path)
